2. What we do... section

--- a/0-index.html
+++ b/0-index.html
@@ -49,7 +49,7 @@
             <h2 class="section-title">Lorem ipsum dolor set amet lorem ipsum</h2>
             <h3 class="section-subtitle">Lorem ipsum dolor set amet lorem ipsum dolor set</h3>
             <a href="#" class="button">Call to action</a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            <p class="section-tagline">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore
               magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
               commodo
